--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "mdfmt"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["tux3 <barrdetwix@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+clap = "2"
